完善浏览效果

--- a/app/src/main/res/layout/loading_layout.xml
+++ b/app/src/main/res/layout/loading_layout.xml
@@ -1,22 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/orange"
     android:clickable="true"
     android:focusable="true"
+    android:orientation="vertical"
+    android:gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <com.rdc.leavesloading.LeavesLoading
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:leafFloatSpeed="1100"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:leafSrc="@drawable/iv_leaf_3"
-        app:fanSrc="@drawable/iv_fan_3"
-        app:progress="75"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Loading..."
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_title"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/leavesLoading_loading_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.rdc.leavesloading.LeavesLoading
         android:id="@+id/leavesLoading_loading_layout"
-        />
-</FrameLayout>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:fanSrc="@drawable/iv_fan_3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:leafFloatSpeed="1100"
+        app:leafSrc="@drawable/iv_leaf_3"
+        app:fanRotateSpeed="8"
+         />
+</android.support.constraint.ConstraintLayout>
