1.修复Android9.0设置桌面图标无效的问题。 2.修复Android9.0首页无法滑动的问题。 3.修复首页漫画卡片章节数UI异常问题。

--- a/app/src/main/res/layout/loading_layout.xml
+++ b/app/src/main/res/layout/loading_layout.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/orange"
+    android:background="@color/colorOrange"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
@@ -17,7 +17,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Loading..."
-        android:textColor="@color/white"
+        android:textColor="@color/colorWhite"
         android:textSize="@dimen/text_size_title"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/leavesLoading_loading_layout"
@@ -33,13 +33,11 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:fanSrc="@drawable/iv_fan_3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:leafFloatSpeed="1100"
-        app:leafSrc="@drawable/iv_leaf_3"
         app:fanRotateSpeed="8"
          />
 </android.support.constraint.ConstraintLayout>
