--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -42,7 +42,7 @@
                     <ImageView
                         android:id="@+id/iv_bg_top_act_book_detail"
                         android:layout_width="0dp"
-                        android:layout_height="180dp"
+                        android:layout_height="200dp"
                         android:scaleType="centerCrop"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -55,7 +55,7 @@
                         android:layout_width="115dp"
                         android:layout_height="153dp"
                         android:layout_marginStart="10dp"
-                        android:layout_marginTop="@dimen/topLayoutHeight"
+                        android:layout_marginTop="95dp"
                         android:layout_marginBottom="10dp"
                         android:elevation="15dp"
                         app:layout_constraintBottom_toBottomOf="parent"
